refactor(Parking): ParkingService
효율적인 코드로 변경하였습니다.